--- a/src/components/forms/formComponents/PersonInfo.css
+++ b/src/components/forms/formComponents/PersonInfo.css
@@ -1,24 +1,106 @@
-/* .card-registration .select-input.form-control[readonly]:not([disabled]) {
-    font-size: 1rem;
-    line-height: 2.15;
-    padding-left: .75em;
-    padding-right: .75em;
-  }
-  .card-registration .select-arrow {
-    top: 13px;
-  } */
 
-  /* .container{
-    height: ;
-  } */
+ /* Style inputs with type="text", select elements and textareas */
+input[type=text], textarea,input[type=url]{
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid rgb(204, 204, 204); /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+}
 
-  .form-outline{
-    background-color: rgb(233, 229, 229);
-        border-radius: 15px;
+input[type=date]{
+  width: 40%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid rgb(204, 204, 204); /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical;/* Allow the user to vertically resize the textarea (not horizontally) */
+}
 
-  }
+input[type=file]{
+  width: 150%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid rgb(204, 204, 204); /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+}
 
-  .profField input[type=text]{
-    padding:50px;
-  }
 
+select{
+  width: 20%;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  width:60%;
+  margin-left: 20%;
+}
+
+.container input ,textarea ,select{
+  background-color: rgb(142, 187, 190);
+}
+
+.formInline{
+  display: inline-flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+#fname{
+  margin-right: 10%;
+}
+
+.formInline label{
+  width:40%;
+}
+
+.labelFname{
+  padding-left: 0px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.labelLname{
+  padding-left: 0px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+#img{
+  width: 100%;
+  border-radius: 5px;
+}
+
+
+/* Select */
+
+.selectOption select{
+  width: 40%;
+  margin-right: 40%;
+}
+
+/* .labelGender{
+  padding-left: 0px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+} */
+
+.labelState{
+
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
