--- a/src/Pages/login/Login.css
+++ b/src/Pages/login/Login.css
@@ -1,318 +1,172 @@
-/* body {
-    align-items: center;
-    background-color:grey;
-    display: flex;
-    justify-content: center;
-    height: 100vh;
-  }*/
-
-  /* body{
-    background-color: white;
-  }
-  
-  .form {
-    background-color:rgb(26, 173, 173);
-    border-radius: 20px;
-    box-sizing: border-box;
-    height: 60%;
-    padding: 20px;
-    width: 20%;
-    margin-left: 40%;
-    margin-top: 8%;
-  }
-  
-  .title {
-    color: #eee;
-     font-family: sans-serif; 
-    font-size: 36px;
-    font-weight: 600;
-    margin-top: 30px;
-  }
-  
-  .subtitle {
-    color: #eee;
-     font-family: sans-serif; 
-    font-size: 16px;
-    font-weight: 600;
-    margin-top: 10px;
-  }
-  
-  .input-container {
-    height: 50px;
-    position: relative;
-    width: 100%;
-  }
-  
-  .ic1 {
-    margin-top: 40px;
-  } 
-  
-  .ic2 {
-    margin-top: 30px;
-  }
-  
-  .input {
-    background-color: #303245;
-    border-radius: 12px;
-    border: 0;
-    box-sizing: border-box;
-    color: #eee;
-    font-size: 18px;
-    height: 100%;
-    outline: 0;
-    padding: 4px 20px 0;
-    width: 100%;
-  }
-  
-  .cut {
-    background-color: #15172b;
-    border-radius: 10px;
-    height: 20px;
-    left: 20px;
-    position: absolute;
-    top: -20px;
-    transform: translateY(0);
-    transition: transform 200ms;
-    width: 76px;
-  }
-  
-  .cut-short {
-    width: 50px;
-  }
-  
-  .input:focus ~ .cut,
-  .input:not(:placeholder-shown) ~ .cut {
-    transform: translateY(8px);
-  }
-  
-  .placeholder {
-    color: #3a3a72;
-    font-family: sans-serif;
-    left: 20px;
-    line-height: 14px;
-    pointer-events: none;
-    position: absolute;
-    transform-origin: 0 50%;
-    transition: transform 200ms, color 200ms;
-    top: 20px;
-  }
-  
-  .input:focus ~ .placeholder,
-  .input:not(:placeholder-shown) ~ .placeholder {
-    transform: translateY(-30px) translateX(10px) scale(0.75);
-  }
-  
-  .input:not(:placeholder-shown) ~ .placeholder {
-    color: #808097;
-  }
-  
-  .input:focus ~ .placeholder {
-    color: #dc2f55;
-  }
-  
-  .submit {
-    background-color: rgb(13, 99, 99);
-    border-radius: 12px;
-    border: 0;
-    box-sizing: border-box;
-    color: #eee;
-    cursor: pointer;
-    font-size: 18px;
-    height: 50px;
-    margin-top: 38px;
-    outline: 0;
-    text-align: center;
-    width: 100%;
-  }
-  
-  .submit:active {
-    background-color: #06b;
-  }
-  
-  .pretext{
-      color: white;
-  }
-
-  .error{
-    color: red;
-	display: flex;
-	justify-content: center;
-	height: 0.1px;
-    font-size: x-small;
-  }
-
-  .signupchk{
-    color: white;
-  } */
-
-  /* $font-family:   "Roboto"; 
-$font-size:     14px;
-
-$color-primary: #ABA194; */
-
- * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* ::placeholder {
-  color: black;
+color: black;
 } */
 
 a{
-  text-decoration:none;
-  font-size: smaller;
+text-decoration:none;
+font-size: smaller;
 }
 
 span{
-  text-decoration:none;
-  font-size: smaller;
+text-decoration:none;
+font-size: smaller;
 }
 
 body {
-    font-family: "Roboto";
-    /* font-size : 14px; */
-    /* background-size: 200% 100% !important; 
-    animation: move 10s ease infinite;
-    transform: translate3d(0, 0, 0);
-    background: linear-gradient(45deg, #49D49D 10%, #A2C7E5 90%);
-    height: 100vh */
+  font-family: "Roboto";
+  /* font-size : 14px; */
+  /* background-size: 200% 100% !important; 
+  animation: move 10s ease infinite;
+  transform: translate3d(0, 0, 0);
+  background: linear-gradient(45deg, #49D49D 10%, #A2C7E5 90%);
+  height: 100vh */
 }
 
 img{
-  border-radius: 50%;
-  height: 20%;
-  width: 20%;
+border-radius: 50%;
+height: 20%;
+width: 20%;
 }
 .user {
-    width: 90%;
-    max-width: 340px;
-    margin: 10vh auto;
+  width: 90%;
+  max-width: 340px;
+  margin: 10vh auto;
 }
 
 .user__header {
-    text-align: center;
-    opacity: 0;
-    transform: translate3d(0, 500px, 0);
-    animation: arrive 500ms ease-in-out 0.7s forwards;
+  text-align: center;
+  opacity: 0;
+  transform: translate3d(0, 500px, 0);
+  animation: arrive 500ms ease-in-out 0.7s forwards;
 }
 
 .user__title {
-    font-size: 14px;
-    margin-bottom: -10px;
-    font-weight: 500;
-    color: white;
-    text-transform: capitalize;
+  font-size: 14px;
+  margin-bottom: -10px;
+  font-weight: 500;
+  color: white;
+  text-transform: capitalize;
 
 }
 
 .form {
-    margin-top: 40px;
-    border-radius: 6px;
-    overflow: hidden;
-    opacity: 1;
-    transform: translate3d(0, 500px, 0);
-    animation: arrive 500ms ease-in-out 0.9s forwards;
-    width:100%;
-    height: 100%;
-    /* background-color: wheat; */
+  margin-top: 40px;
+  border-radius: 6px;
+  overflow: hidden;
+  opacity: 1;
+  transform: translate3d(0, 500px, 0);
+  animation: arrive 500ms ease-in-out 0.9s forwards;
+  width:100%;
+  height: 100%;
+  /* background-color: wheat; */
 }
 
 .form--no {
-    animation: NO 1s ease-in-out;
-    opacity: 1;
-    transform: translate3d(0, 0, 0);
+  animation: NO 1s ease-in-out;
+  opacity: 1;
+  transform: translate3d(0, 0, 0);
 }
 
- .form-input {
-    display: block;
-    width: 100%;
-    padding: 20px;
-    font-family: "Roboto";
-    -webkit-appearance: none;
-    border: 0;
-    outline: 0;
-    transition: 0.3s;
-    /* background-color: white; */
+.form-input {
+  display: block;
+  width: 100%;
+  padding: 20px;
+  font-family: "Roboto";
+  -webkit-appearance: none;
+  border: 0;
+  outline: 0;
+  transition: 0.3s;
+  border: 1px solid white !important;
+  margin-bottom: 2px !important;
+  border-radius: 5px !important;
+  /* background-color: white; */
 }
 
 .form-input :focus{
-  background: darken(#fff, 3%);
+background: darken(#fff, 3%) !important;
 }
 
 /* #Username{
-  background-color: white;
+background-color: white;
 }
 
 #password{
-  background-color: white;
+background-color: white;
 } */
 
 .error{
-  color: white;
+color: white;
 display: flex;
 justify-content: center;
 height: 0.1px;
-  font-size: x-small;
-  z-index: 1000;
+font-size: x-small;
+z-index: 1000;
 }
 
 .btn {
-    display: block;
-    width: 100%;
-    height:fit-content;
-    padding: 10px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    -webkit-appearance: none;
-    background: rgb(22, 200, 177);
-    transition: 0.3s;
-    text-align:center;
+  display: block;
+  width: 100%;
+  height:55px;
+  padding: 10px;
+  font-family:Georgia, 'Times New Roman', Times, serif ;
+  font-size: 20px;
+  -webkit-appearance: none;
+  background: rgb(22, 200, 177);
+  transition: 0.3s;
+  text-align:center;
+  border-radius: 5px !important;
+
 }
 
 .btn:hover {
-  background: darken(#ABA194, 10%);
+background: darken(#ABA194, 10%);
 }
 
 @keyframes NO {
-  from, to {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
+from, to {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
 
-  10%, 30%, 50%, 70%, 90% {
-    -webkit-transform: translate3d(-10px, 0, 0);
-    transform: translate3d(-10px, 0, 0);
-  }
+10%, 30%, 50%, 70%, 90% {
+  -webkit-transform: translate3d(-10px, 0, 0);
+  transform: translate3d(-10px, 0, 0);
+}
 
-  20%, 40%, 60%, 80% {
-    -webkit-transform: translate3d(10px, 0, 0);
-    transform: translate3d(10px, 0, 0);
-  }
+20%, 40%, 60%, 80% {
+  -webkit-transform: translate3d(10px, 0, 0);
+  transform: translate3d(10px, 0, 0);
+}
 }
 
 @keyframes arrive {
-    0% {
-        opacity: 0;
-        transform: translate3d(0, 50px, 0);
-    }
-    
-    100% {
-        opacity: 1;
-        transform: translate3d(0, 0, 0);
-    }
+  0% {
+      opacity: 0;
+      transform: translate3d(0, 50px, 0);
+  }
+
+  100% {
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+  }
 }
 
 @keyframes move {
-    0% {
-        background-position: 0 0
-    }
+  0% {
+      background-position: 0 0
+  }
 
-    50% {
-        background-position: 100% 0
-    }
+  50% {
+      background-position: 100% 0
+  }
 
-    100% {
-        background-position: 0 0
-    }
+  100% {
+      background-position: 0 0
+  }
 } 
