--- a/src/components/forms/formComponents/PersonInfo.css
+++ b/src/components/forms/formComponents/PersonInfo.css
@@ -3,7 +3,7 @@
 input[type=text], textarea,input[type=url]{
   width: 100%; /* Full width */
   padding: 12px; /* Some padding */ 
-  border: 1px solid rgb(204, 204, 204); /* Gray border */
+  border: 1px solid rgb(204, 204, 204); /*Gray Border*/
   border-radius: 4px; /* Rounded borders */
   box-sizing: border-box; /* Make sure that padding and width stays in place */
   margin-top: 6px; /* Add a top margin */
