Added choose template,add comments,react to pdf page,
Made changes to form components

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -23,7 +23,8 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;}
+	vertical-align: baseline;
+}
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -3997,4 +3998,13 @@ input, select, textarea {
 
 	body.is-mobile.landing #footer {
 		background-color: #1d242a;
+	}
+
+
+	.inner h2{
+		color: white !important;
+	}
+
+	.content h2{
+		color: white !important;
 	}
