--- a/src/components/forms/formComponents/PersonInfo.css
+++ b/src/components/forms/formComponents/PersonInfo.css
@@ -30,6 +30,8 @@ input[type=file]{
   box-sizing: border-box; /* Make sure that padding and width stays in place */
   margin-top: 6px; /* Add a top margin */
   margin-bottom: 16px; /* Bottom margin */
+  color: rgba(0, 0, 0, 0)
+  
 }
 
 
