--- a/src/Pages/user home/UserHome.css
+++ b/src/Pages/user home/UserHome.css
@@ -5,8 +5,8 @@
 
 .userHomeHeader   {
     margin-top: 5rem;
-    display: flex;
-    justify-content: center;
+    display:flex;
+    justify-content: center !important;
 }
 
 .userPara{
@@ -63,7 +63,7 @@
   }
   
   .userCarousel {
-    max-width: 50.5rem;
+    max-width: 60.5rem;
     margin: 0 auto;
     padding: 0 1.25rem;
     font-family: 'Lato', sans-serif;
