--- a/src/Pages/resume templates/template one/TemplateOne.css
+++ b/src/Pages/resume templates/template one/TemplateOne.css
@@ -25,13 +25,17 @@
 }
 .innerOne { 
     padding: 10px 80px; 
-    margin: 80px auto; 
+    /* margin: 80px auto;  */
     background: #f5f5f5; 
     border: solid #666; 
     border-width: 8px 0 2px 0; 
     /* border: 2px solid red; */
-    width: 70rem;
+    /* width: 70rem; */
 }
+
+/* .lineBottom{
+    border: 2px solid red;
+} */
 
 
 .skillBorder{
@@ -296,6 +300,7 @@ a#pdf:hover {
     text-align:justify;
     /* border: 2px solid red; */
     font-size: 16px !important;
+    color: black;
     
 }
 
@@ -307,3 +312,25 @@ a#pdf:hover {
     margin-right: 6rem;
 
 }
+
+
+.table, th, td {
+    border: 2px solid black;
+  }
+
+  .table thead tr th{
+      color: black;
+  }
+
+
+
+  .tableRow td div ul li{
+      color: black;
+  }
+  li{
+      list-style:disc;
+  }
+
+  /* .tableLine{
+      border-bottom: 2px solid black;
+  } */
