Added logout and template two

--- a/src/Pages/resume templates/template one/TemplateOne.css
+++ b/src/Pages/resume templates/template one/TemplateOne.css
@@ -288,11 +288,11 @@ a#pdf:hover {
 }
 
 .fa-linkedin:hover{
-    color:blue;
+    color:rgb(255, 255, 255);
 }
 
 .fa-github:hover{
-    color:blue;
+    color:rgb(255, 255, 255);
 }
 
 .objectivePara p{
