Template One updated

--- a/src/Pages/resume templates/template three/TemplateThree.css
+++ b/src/Pages/resume templates/template three/TemplateThree.css
@@ -170,6 +170,7 @@ border: none;
   font-weight: bold;
   color: rgb(31, 30, 30);
   font-size: 14px;
+  list-style: disc;
 }
 
 /* Side section of the resume -END */
