--- a/src/Pages/resume templates/template one/TemplateOne.css
+++ b/src/Pages/resume templates/template one/TemplateOne.css
@@ -147,7 +147,7 @@
 
 #inner li { 
     line-height: 24px; 
-    border-bottom: 1px solid #ccc; 
+    /* border-bottom: 1px solid #ccc;  */
 }
 
 #inner p.enlarge { 
@@ -157,7 +157,7 @@
 }
 
 #inner p.enlarge span { 
-    color: #000 
+    color: #000 ;
 }
 
 .contact-info { 
@@ -208,6 +208,12 @@ a#pdf:hover {
     top: 2.8rem; 
     right: 0; 
 }
+
+.project p{
+    color:rgba(51, 51, 51, 0.925);
+}
+
+
 .job { 
     position: relative; 
     margin-bottom: 1em; 
@@ -223,6 +229,7 @@ a#pdf:hover {
 
 .job p { 
     margin: 0.75em 0 3em 0; 
+    color: rgba(51, 51, 51, 0.925);
 }
 
 .last { 
@@ -259,6 +266,11 @@ a#pdf:hover {
     margin-bottom: 6px; 
 }
 
+.oneSkillList li{
+    color: rgba(51, 51, 51, 0.925);
+
+}
+
 
 #srt-ttab { 
     margin-bottom: 100px; 
@@ -287,12 +299,12 @@ a#pdf:hover {
     margin-right: 0.5rem;
 }
 
-.fa-linkedin:hover{
-    color:rgb(255, 255, 255);
+.socialLinks i:hover{
+    color:rgb(117, 108, 108);
 }
 
-.fa-github:hover{
-    color:rgb(255, 255, 255);
+.socialLinks i:hover{
+    color:rgb(117, 108, 108);
 }
 
 .objectivePara p{
@@ -300,7 +312,7 @@ a#pdf:hover {
     text-align:justify;
     /* border: 2px solid red; */
     font-size: 16px !important;
-    color: black;
+    color: rgba(51, 51, 51, 0.925);
     
 }
 
@@ -319,7 +331,7 @@ a#pdf:hover {
   }
 
   .table thead tr th{
-      color: black;
+      color:rgba(51, 51, 51, 0.925);
   }
 
 
@@ -327,8 +339,9 @@ a#pdf:hover {
   .tableRow td div ul li{
       color: black;
   }
-  li{
+  .tableList li{
       list-style:disc;
+      color: rgba(51, 51, 51, 0.925);
   }
 
   /* .tableLine{
