Added add user , Added admin dashboard to header.js
condition added to login.js to check whether the logged in person is admin or user.

--- a/src/Pages/admin/Admin.css
+++ b/src/Pages/admin/Admin.css
@@ -11,11 +11,24 @@ margin-left: 20%;
     margin-right: 2%;
     background-color: rgb(53, 94, 29);
     border-radius: 10px;
+    border: none;
 }
 
 .adminButton button:hover{
     background-color: rgb(97, 172, 53);
 }
+
+.addUser{
+    height: 50px;
+    
+}
+.adminButton a{
+    border: none !important;
+}
+
+/* .addUserLink{
+    border: 5px solid red;
+} */
 
 .removeUser{
     background-color: rgb(112, 17, 5) !important;
