--- a/src/Pages/admin/ViewProfile.css
+++ b/src/Pages/admin/ViewProfile.css
@@ -71,7 +71,7 @@
   
   .vp-email {
     border-style: solid;
-    border-width: 0px 0px 0px 0px;
+    border-width: 0px 0px 2px 0px;
     box-sizing: border-box;
     margin: 15px;
     padding: 10px;
@@ -161,7 +161,7 @@
     box-shadow: 10px 10px 5px grey;
     background-color: rgb(116, 107, 107);
     box-sizing: border-box;
-    height: 300px;
+    height: 450px;
     width: 850px;
     margin: 15px 15px 15px 15px;
   }
@@ -191,6 +191,14 @@
     background-color: #b30000;
     margin: 10px 110px 10px 0px;
   }
+.vp-project-li{
+  width: 410px auto;
+  border: solid;
+  border-width: 1px;
+  background-color: #b30000;
+  margin: 10px 110px 10px 0px;
+}
+
 
   .vpInline{
       display: inline-flex;
